2023-10-18  Franz Holzinger  <franz@ttproducts.de>
    * add Documentation fixes

2023-09-06  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 11 and 12 only

2023-05-03  Franz Holzinger  <franz@ttproducts.de>
    * despite of Breaking no. 87623:
      readd TypoScript/Extbase/setup.txt because static_info_tables static_info_tables 6.9.6 uses the method TYPO3\CMS\Extbase\Configuration\ConfigurationManager::getConfiguration for mapping.

2023-04-18  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 12
    * remove deprecated TypoScript/Extbase/setup.txt

2022-01-25  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 10: Readd needed file class.ext_update.php

2022-01-20  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 10: Remove file class.ext_update.php
    * add requirement for the extension addons_em: This is needed for the Extension Manager if the file ext_tables_static+adt.sql has been modified manually by the admin.

2021-11-30  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 11: No other modifications.
    * add Kosovo, missing languages and territories

2021-07-13  Franz Holzinger  <franz@ttproducts.de>
    * Use the domain jambagecom in the composer.json.

2020-11-24  Franz Holzinger  <franz@ttproducts.de>
    * fix issue from static_info_tables_de: Undo part of latest pullrequest to the former version 10.0 support.

2020-11-18  Franz Holzinger  <franz@ttproducts.de>
    * Important bugfix to the former version 10.0 support.
    * Simplification of the TCA files.

2020-06-24  Davide Alghi
    * feature: add missing currency names

2019-11-27  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 10: Add the file Configuration/Extbase/Persistence/Classes.php.

2019-01-16  André Schließer  <a.schliesser@zeroseven.de>
    * compatibility for TYPO3 9.5

2018-08-07  Franz Holzinger  <franz@ttproducts.de>