@@ -1,42 +1,0 @@
-config.tx_extbase {
-	persistence {
-		classes {
-			SJBR\StaticInfoTables\Domain\Model\Country {
-				mapping {
-					columns {
-						cn_short_it.mapOnProperty = shortNameIt
-					}
-				}
-			}
-			SJBR\StaticInfoTables\Domain\Model\CountryZone {
-				mapping {
-					columns {
-						zn_name_it.mapOnProperty = nameIt
-					}
-				}
-			}
-			SJBR\StaticInfoTables\Domain\Model\Currency {
-				mapping {
-					columns {
-						cu_name_it.mapOnProperty = nameIt
-						cu_sub_name_it.mapOnProperty = subdivisionNameIt
-					}
-				}
-			}
-			SJBR\StaticInfoTables\Domain\Model\Language {
-				mapping {
-					columns {
-						lg_name_it.mapOnProperty = nameIt
-					}
-				}
-			}
-			SJBR\StaticInfoTables\Domain\Model\Territory {
-				mapping {
-					columns {
-						tr_name_it.mapOnProperty = nameIt
-					}
-				}
-			}
-		}
-	}
-}
