@@ -1,3 +1,7 @@
+2025-05-22  Franz Holzinger  <franz@ttproducts.de>
+    * remove deprecated TypoScript/Extbase/setup.txt
+    * compatibility with TYPO3 12 and 13 only
+
 2023-10-18  Franz Holzinger  <franz@ttproducts.de>
     * add Documentation fixes
 
